
  * doc/tutorial/Lintian/Tutorial.pod:
    + [JW] Add link to the WritingTests tutorial.
    + [JW] Add SEE ALSO section (for the man formatter).
  * doc/tutorial/Lintian/Tutorial/WritingTests.pod:
    + [JW] Fix formatting error.

  * reporting/config:
    + [NT] Remove "$COPY_DOCS" configuration option.  The
      html_reports now always copies the documentation.
  * reporting/html_reports:
    + [NT] Refactored into a "dplint" command and renamed to
      "commands/reporting-html-reports.pm".
  * reporting/templates/tags-severity.tmpl:
    + [NT] Add sections for "classification" tags.

 -- Niels Thykier <niels@thykier.net>  Sun, 24 Apr 2016 07:16:45 +0000

lintian (2.5.44) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - build-depends-arch-without-arch-dependant-binary
      - changelog-references-temp-security-identifier
      - ctrl-script
      - debian-build-system
      - debian-changelog-has-wrong-day-of-week
      - extra-whitespace-around-name-in-changelog-trailer
      - invalid-versioned-provides
      - maintscript-calls-ldconfig
      - no-ctrl-scripts
      - package-has-unnecessary-activation-of-ldconfig-trigger
      - package-must-activate-ldconfig-trigger
      - source-format
    + Removed:
      - debian-changelog-has-wrong-weekday
      - description-contains-duplicated-word
      - dh_pysupport-is-obsolete
      - missing-dependency-on-python-support
      - postinst-has-useless-call-to-ldconfig
      - postinst-must-call-ldconfig
      - postrm-has-useless-call-to-ldconfig
      - postrm-should-call-ldconfig
      - postrm-unsafe-ldconfig
      - preinst-calls-ldconfig
      - prerm-calls-ldconfig
      - versioned-provides

  * checks/changelog-file.{desc,pm}:
    + [JW,NT] Use "day of week" rather than "weekday".
      (Closes: #796093)
    + [JW,NT] Flag references to "TEMP" security identifiers.
      Thanks to Paul Wise for assisting with the regex.
      (Closes: #807892)
  * checks/control-files.{desc,pm}: